--- a/module2/index.html
+++ b/module2/index.html
@@ -3,7 +3,7 @@
    <head>
    	   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	   <title>Assignment Solution for Module 2</title>
-	   <link type ="text/css" rel= "stylesheet" href = "css/stylesheet.css">	
+	   <link type ="text/css" rel= "stylesheet" href = "CSS/stylesheet.css">	
    </head>
        <body>
           <div id="content">     
